# Codex_vibe_coding

focuslog/: .gitignore  README.md  UPGRADE_PLAN.md  __init__.py  app_entry.py  cli.py  clock.py  db.py  exporting.py  gui.py  legacy_gui.py  notifier.py  reporting.py  requirements-gui.txt  timer.py
focuslog/api/: __init__.py  app.py  deps.py  schemas.py  timer_service.py
focuslog/desktop/: __init__.py  main.py
focuslog/frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
focuslog/scripts/: build_desktop_mac.sh  build_desktop_win.bat  build_exe.bat  build_web.bat  install_gui_deps.bat  run_gui.bat  test.sh
focuslog/tests/: test_api.py  test_cli.py  test_db.py  test_helpers.py  test_notifier.py  test_report.py  test_stats.py  test_timer.py
notes_generater/: README.md  plan.md  pyproject.toml
notes_generater/src/notes_agent/: __init__.py  check_runner.py  cli.py  codex_executor.py  diff_service.py  feedback_service.py  gui_app.py  gui_settings.py  models.py  path_utils.py  project_service.py  round0_initializer.py  run_history_service.py  snapshot_service.py  workflow_orchestrator.py
notes_generater/tests/: test_codex_executor.py  test_diff_service.py  test_feedback_service.py  test_gui_settings.py  test_models.py  test_project_service.py  test_round0_and_check.py  test_run_history_service.py  test_snapshot_service.py  test_workflow_orchestrator.py
prompt_vault/: .gitignore  README.md  __init__.py  __main__.py  app_entry.py
prompt_vault/examples/: vars.json
prompt_vault/frontend/: package-lock.json  package.json
(+38 files in other folders)
