[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-generater"
version = "0.1.0"
description = "Local macOS notes agent project scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
gui = ["PySide6>=6.6.0"]

[project.scripts]
notes-agent = "notes_agent.cli:main"
notes-agent-gui = "notes_agent.gui_app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
